--- a/Vistas/MainWindow.xaml
+++ b/Vistas/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="Vistas.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Height="224" Width="389" Loaded="Window_Loaded">
-    <Grid Width="367" Height="187">
-        <Button Content="Iniciar Sesion" Margin="140,130,0,0" Name="btnLogin" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="93" Click="button1_Click" />
+        Title="MainWindow" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Height="225" Width="367" Loaded="Window_Loaded">
+    <Grid Width="347" Height="187">
+        <Button Content="Iniciar Sesion" Margin="131,129,0,0" Name="btnLogin" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="103" Click="btnLogin_Click" />
         <TextBox Height="23" Margin="123,38,0,0" Name="txtUsuario" VerticalAlignment="Top" HorizontalAlignment="Left" Width="192" />
         <TextBox Height="23" Margin="123,85,0,0" Name="txtPassword" VerticalAlignment="Top" TextChanged="textBox2_TextChanged" HorizontalAlignment="Left" Width="192" />
         <Label Content="Usuario:" Height="28" HorizontalAlignment="Left" Margin="26,34,0,0" Name="lblUsuario" VerticalAlignment="Top" Width="53" />
