--- a/Vistas/Menu.xaml
+++ b/Vistas/Menu.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="Vistas.Menu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Menu" Height="228" Width="464">
+        Title="Menu" Height="228" Width="464" Loaded="Window_Loaded">
     <Grid>
-        <Button Content="Proveedores" Height="23" HorizontalAlignment="Left" Margin="85,77,0,0" Name="btnProveedores" VerticalAlignment="Top" Width="75" />
-        <Button Content="Productos" Height="23" HorizontalAlignment="Left" Margin="301,124,0,0" Name="btnProductos" VerticalAlignment="Top" Width="75" />
-        <Button Content="Vendedores" Height="23" HorizontalAlignment="Left" Margin="85,124,0,0" Name="btnVendedores" VerticalAlignment="Top" Width="75" />
-        <Button Content="Clientes" Height="23" HorizontalAlignment="Left" Margin="301,77,0,0" Name="btnClientes" VerticalAlignment="Top" Width="75" />
+        <Button Content="Proveedores" Height="23" HorizontalAlignment="Left" Margin="85,77,0,0" Name="btnProveedores" VerticalAlignment="Top" Width="75" Click="btnProveedores_Click" />
+        <Button Content="Productos" Height="23" HorizontalAlignment="Left" Margin="301,124,0,0" Name="btnProductos" VerticalAlignment="Top" Width="75" Click="btnProductos_Click" />
+        <Button Content="Vendedores" Height="23" HorizontalAlignment="Left" Margin="85,124,0,0" Name="btnVendedores" VerticalAlignment="Top" Width="75" Click="btnVendedores_Click" />
+        <Button Content="Clientes" Height="23" HorizontalAlignment="Left" Margin="301,77,0,0" Name="btnClientes" VerticalAlignment="Top" Width="75" Click="btnClientes_Click" />
         <Label Content="Seleccione el ABM" Height="28" HorizontalAlignment="Left" Margin="22,34,0,0" Name="lblDecision" VerticalAlignment="Top" />
     </Grid>
 </Window>
