--- a/Vistas/ABMClientes.xaml
+++ b/Vistas/ABMClientes.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ABMClientes" Height="291" Width="675">
     <Grid>
-        <Button BorderBrush="#FFA7A7A7" Content="Salir" Foreground="#FF4D76DD" Height="32" HorizontalAlignment="Left" Margin="590,220,0,0" Name="btnSalir" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63">
+        <Button BorderBrush="#FFA7A7A7" Content="Salir" Foreground="#FF4D76DD" Height="32" HorizontalAlignment="Left" Margin="590,220,0,0" Name="btnSalir" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63" Click="btnSalir_Click">
             <Button.Background>
                 <RadialGradientBrush>
                     <GradientStop Color="#FFC2EFF9" Offset="0" />
@@ -19,7 +19,7 @@
                 </RadialGradientBrush>
             </Button.Background>
         </Button>
-        <Button BorderBrush="#FFA7A7A7" Content="Nuevo" Foreground="#FFF86449" Height="32" HorizontalAlignment="Left" Name="btnNuevo" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63">
+        <Button BorderBrush="#FFA7A7A7" Content="Nuevo" Foreground="#FFF86449" Height="32" HorizontalAlignment="Left" Name="btnNuevo" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63" Click="btnNuevo_Click">
             <Button.Background>
                 <RadialGradientBrush>
                     <GradientStop Color="#FFC2EFF9" Offset="0" />
@@ -35,7 +35,7 @@
                 </RadialGradientBrush>
             </Button.Background>
         </Button>
-        <Button BorderBrush="#FFA7A7A7" Content="Guardar" Foreground="#FF4D76DD" Height="32" HorizontalAlignment="Left" Margin="226,0,0,0" Name="btnGuardar" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63">
+        <Button BorderBrush="#FFA7A7A7" Content="Guardar" Foreground="#FF4D76DD" Height="32" HorizontalAlignment="Left" Margin="226,0,0,0" Name="btnGuardar" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63" Click="btnGuardar_Click">
             <Button.Background>
                 <RadialGradientBrush>
                     <GradientStop Color="#FFC2EFF9" Offset="0" />
@@ -43,7 +43,7 @@
                 </RadialGradientBrush>
             </Button.Background>
         </Button>
-        <Button BorderBrush="#FFA7A7A7" Content="Cancelar" Foreground="#FF4D76DD" Height="32" HorizontalAlignment="Left" Margin="295,0,0,0" Name="btnCancelar" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63">
+        <Button BorderBrush="#FFA7A7A7" Content="Cancelar" Foreground="#FF4D76DD" Height="32" HorizontalAlignment="Left" Margin="295,0,0,0" Name="btnCancelar" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63" Click="btnCancelar_Click">
             <Button.Background>
                 <RadialGradientBrush>
                     <GradientStop Color="#FFC2EFF9" Offset="0" />
