--- a/Vistas/ABMClientes.xaml
+++ b/Vistas/ABMClientes.xaml
@@ -3,6 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ABMClientes" Height="291" Width="675">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Vistas;component/Images/muebles.jpg" />
+        </Grid.Background>
         <Button BorderBrush="#FFA7A7A7" Content="Salir" Foreground="#FF4D76DD" Height="32" HorizontalAlignment="Left" Margin="590,220,0,0" Name="btnSalir" OpacityMask="#FF93E2EF" VerticalAlignment="Top" Width="63" Click="btnSalir_Click">
             <Button.Background>
                 <RadialGradientBrush>
