--- a/Vistas/MainWindow.xaml
+++ b/Vistas/MainWindow.xaml
@@ -1,15 +1,15 @@
 ﻿<Window x:Class="Vistas.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Height="225" Width="367">
+        Title="MainWindow" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Height="225" Width="367" Foreground="Black" OpacityMask="{x:Null}">
     <Grid Width="347" Height="187">
         <Grid.Background>
             <ImageBrush ImageSource="/Vistas;component/Images/muebles.jpg" Stretch="Fill" TileMode="None" />
         </Grid.Background>
         <Button Content="Iniciar Sesion" Margin="131,129,0,0" Name="btnLogin" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="103" Click="btnLogin_Click" />
         <TextBox Height="23" Margin="123,38,0,0" Name="txtUsuario" VerticalAlignment="Top" HorizontalAlignment="Left" Width="192" />
-        <TextBox Height="23" Margin="123,85,0,0" Name="txtPassword" VerticalAlignment="Top" HorizontalAlignment="Left" Width="192" />
-        <Label Content="Usuario:" Height="28" HorizontalAlignment="Left" Margin="26,34,0,0" Name="lblUsuario" VerticalAlignment="Top" Width="53" />
-        <Label Content="Contraseña:" Height="28" HorizontalAlignment="Left" Margin="26,81,0,0" Name="lblPassword" VerticalAlignment="Top" />
+        <Label Content="Usuario:" Height="28" HorizontalAlignment="Left" Margin="26,34,0,0" Name="lblUsuario" VerticalAlignment="Top" Width="53" Background="White" />
+        <Label Content="Contraseña:" Height="28" HorizontalAlignment="Left" Margin="26,81,0,0" Name="lblPassword" VerticalAlignment="Top" Background="White" />
+        <PasswordBox Height="23" HorizontalAlignment="Left" Margin="122,81,0,0" Name="txtPassword" VerticalAlignment="Top" Width="192" />
     </Grid>
 </Window>
