--- a/Vistas/ABMClientes.xaml
+++ b/Vistas/ABMClientes.xaml
@@ -86,13 +86,13 @@
                 </RadialGradientBrush>
             </Button.Background>
         </Button>
-        <Label Content="DNI" Height="28" HorizontalAlignment="Left" Margin="223,56,0,0" Name="lblDni" VerticalAlignment="Top" />
+        <Label Content="DNI" Height="28" HorizontalAlignment="Left" Margin="223,56,0,0" Name="lblDni" VerticalAlignment="Top" Background="White" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="313,60,0,0" Name="txtDni" VerticalAlignment="Top" Width="120" />
-        <Label Content="Apellido" Height="28" HorizontalAlignment="Left" Margin="223,85,0,0" Name="lblApellido" VerticalAlignment="Top" />
+        <Label Content="Apellido" Height="28" HorizontalAlignment="Left" Margin="223,85,0,0" Name="lblApellido" VerticalAlignment="Top" Background="White" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="313,89,0,0" Name="txtApellido" VerticalAlignment="Top" Width="120" />
-        <Label Content="Nombre" Height="28" HorizontalAlignment="Left" Margin="223,114,0,0" Name="lblNombre" VerticalAlignment="Top" />
+        <Label Content="Nombre" Height="28" HorizontalAlignment="Left" Margin="223,114,0,0" Name="lblNombre" VerticalAlignment="Top" Background="White" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="313,118,0,0" Name="txtNombre" VerticalAlignment="Top" Width="120" />
-        <Label Content="Dirección" Height="28" HorizontalAlignment="Left" Margin="223,143,0,0" Name="lblDireccion" VerticalAlignment="Top" />
+        <Label Content="Dirección" Height="28" HorizontalAlignment="Left" Margin="223,143,0,0" Name="lblDireccion" VerticalAlignment="Top" Background="White" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="313,147,0,0" Name="txtDireccion" VerticalAlignment="Top" Width="120" />
     </Grid>
 </Window>
